Bug 261608 only search for colon in the first word of a string when checking whether we have a url or keyword patch by Jeff Walden (remove +bmo to email) <jwalden+bmo@mit.edu> r=caillon sr=darin